// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit Level Of Access Component should render the UI correctly for HIPPA page for Basic 1`] = `
<body>
  <div>
    <div
      class="flex flex-col items-center"
    >
      <span
        style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
      />
      <h2
        class="title-2"
      >
        Edit Level Of Access
      </h2>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
      />
      <p
        class="body-1 body-1 text-center"
        style="display: block;"
      />
      <div
        class="flex flex-col w-[358px]"
      >
        <span
          style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
        />
        <main>
          <div
            class="flex flex-col items-center teritary-color-1"
          >
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                Grant 
              </span>
              <span
                class="font-bold"
              >
                Basic
                 Access
                 
              </span>
              <span>
                to 
              </span>
              <span
                class="font-bold"
              >
                Chris Hall
                 
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              class=""
              style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
            />
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
            <span>
              <b>
                Member Name :
              </b>
               
              &lt;Member Name&gt;
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
            <div
              class="flex flex-row font-bold"
            >
              HIPAA Authorization for Basic Portal Access 
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1"
              style="display: block;"
            >
              You are asking BlueCross BlueShield of Tennessee to give the person you have selected through your portal account Basic Access to the selected Member’s health information. This means this person will be able to access basic health information about the Member.
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                 By clicking the
              </span>
              <span
                class="font-bold"
              >
                 "I Agree" 
              </span>
              <span>
                button after reading this, you authorize BlueCross BlueShield of
                Tennessee to share the following health information about the Member with this person,if we maintain it:
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                <ul
                  class="list-outside list-disc pl-5"
                >
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    Demographic and contact information related to you and your family;
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    Your claims and encounter data, including cost information; and
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    Certain clinical data, such as allergies and intolerances, assessments and plans of treatment, care team members, clinical notes, clinical tests, diagnostic imaging, encounter information, goals, health insurance information, health status assessments, immunizations, laboratory tests and results, medications, problems, procedures, provenance, unique device identifiers for implantable devices, and vital signs.
                  </li>
                </ul>
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span
                class="!block mb-4"
              >
                We are making this disclosure at your request, with your
                approval and at your direction. You may be asking us to make this disclosure in order to:
              </span>
              <span
                class="inline-block mb-4"
              >
                <ul
                  class="list-disc list-outside pl-5"
                >
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    Support the person’s involvement in the Member’s care or payment for that care; or
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    Support treatment, payment and certain health care operations activities, including care coordination and case management among the Member’s care team.
                  </li>
                </ul>
              </span>
              <span
                class="!block mb-4 pt-2"
              >
                You acknowledge that this person
                 and the people, companies and other third parties that they may to choose to share Member’s information after they receive it,
                may not be subject to state or
                federal health information privacy laws, such as the federal
                Health Information Portability and Accountability Act and its
                implementing regulations (collectively, called “HIPAA”) .
              </span>
              <span
                class="inline-block pt-4"
              >
                This authorization for the release of your health information is voluntary. This authorization will remain in effect until one of the following events happen:
              </span>
              <span
                class="inline-block mb-4"
              >
                <ul
                  class="list-outside list-disc pl-4 pt-4"
                >
                  <li
                    class="mb-2 marker:text-blue-500"
                  >
                    It is revoked (taken back).
                  </li>
                  <li
                    class="mb-2 marker:text-blue-500"
                  >
                    XX calendar days after the last time you access your portal account. You understand that every time you access your portal account, you reaffirm this authorization and the xx-day clock starts again. If you do not access your portal account for more than xx-days, you will be asked to agree to a new authorization.
                  </li>
                  <li
                    class="mb-2 marker:text-blue-500"
                  >
                    We reasonably determine that allowing 
                    the person you have designated to have Basic Access 
                    to the Member’s 
                     health information present an
                    unacceptable security risk.
                  </li>
                  <li
                    class="mb-2 marker:text-blue-500"
                  >
                    As otherwise provided for in this authorization or our User Agreement, such as if we learn that account credentials have been misused.
                  </li>
                </ul>
              </span>
              <span
                class="mb-4 pt-4"
              >
                You understand that BlueCross BlueShield of Tennessee will not condition the provision of treatment, payment for treatment, enrollment in a health plan, or eligibility for benefits on your agreement to this authorization. You may take back this authorization in writing at any time, except to the extent the information has already been disclosed in reliance on this authorization. You may take back this authorization by sending a request to us the Contact Us page on bcbst.com or by sending us your written cancellation to BlueCross BlueShield of Tennessee, Privacy; 1 Cameron Hill Circle; Building 1, 5th Floor; Chattanooga, Tennessee 37402. If you decide to take back this authorization, it will not affect any disclosure BlueCross BlueShield made in reliance on this authorization before the cancellation.
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              class=""
              style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
            />
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              class="flex flex-row gap-2 p-2  checkbox-disabled "
            >
              <label>
                <input
                  checked=""
                  id="myCheckbox"
                  name=""
                  type="checkbox"
                />
              </label>
              <div
                class="flex flex-col"
              >
                <label
                  for="myCheckbox"
                >
                  <p />
                </label>
                <span
                  class="rich-text body-1 undefined"
                >
                  <span
                    class="font-bold"
                  >
                    I Agree.
                  </span>
                  <span>
                     Clicking “I Agree” means that you have read, understand, and
                    agree to this authorization. You are giving your permission
                    for BlueCross BlueShield of Tennessee to give 
                    this person Basic Access to Member’s
                    health information, including your highly sensitive health
                    information. You understand that you can contact BlueCross
                    BlueShield of Tennessee for a copy of this authorization.
                  </span>
                </span>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
          </div>
        </main>
        <button
          aria-label="Save Permissions"
          class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null font-bold active"
          type="button"
        >
          Save Permissions
        </button>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
        />
      </div>
      <a
        aria-label="Cancel"
        style="display: block;"
      >
        <button
          class="flex flex-row link-container undefined"
          style="max-width: max-content; height: auto; display: block;"
          tabindex="-1"
          type="button"
        >
          <p
            class="link undefined"
          >
            Cancel
          </p>
        </button>
      </a>
    </div>
  </div>
</body>
`;

exports[`Edit Level Of Access Component should render the UI correctly for HIPPA page for full 1`] = `
<body>
  <div>
    <div
      class="flex flex-col items-center"
    >
      <span
        style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
      />
      <h2
        class="title-2"
      >
        Edit Level Of Access
      </h2>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
      />
      <p
        class="body-1 body-1 text-center"
        style="display: block;"
      />
      <div
        class="flex flex-col w-[358px]"
      >
        <span
          style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
        />
        <main>
          <div
            class="flex flex-col items-center teritary-color-1"
          >
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                Grant 
              </span>
              <span
                class="font-bold"
              >
                Full
                 Access
                 
              </span>
              <span>
                to 
              </span>
              <span
                class="font-bold"
              >
                Chris Hall
                 
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              class=""
              style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
            />
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
            <span>
              <b>
                Member Name :
              </b>
               
              &lt;Member Name&gt;
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
            />
            <div
              class="flex flex-row font-bold"
            >
              HIPAA Authorization for Full Portal Access 
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <p
              class="body-1"
              style="display: block;"
            >
              You are asking BlueCross BlueShield of Tennessee to give the person you have selected through your portal account Full Access to the selected Member’s health information. This means that this person will be able to access highly sensitive health information about the Member. To support compliance with state and federal privacy laws, you understand and acknowledge that if the Member is a minor who is over the age thirteen (13) years, BlueCross BlueShield of Tennessee requires that this authorization form be signed by both the Member and the Member’s personal representative
            </p>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                 By clicking the
              </span>
              <span
                class="font-bold"
              >
                 "I Agree" 
              </span>
              <span>
                button after reading this, you authorize BlueCross BlueShield of
                Tennessee to share the following health information about the Member with this person,if we maintain it:
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                <ul
                  class="list-outside list-disc pl-5"
                >
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    Demographic and contact information related to you and your family;
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    Your claims and encounter data, including cost information; and
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    Certain clinical data, such as allergies and intolerances, assessments and plans of treatment, care team members, clinical notes, clinical tests, diagnostic imaging, encounter information, goals, health insurance information, health status assessments, immunizations, laboratory tests and results, medications, problems, procedures, provenance, unique device identifiers for implantable devices, and vital signs.
                  </li>
                </ul>
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="block"
            >
              The information they will have access to may reveal highly
                sensitive health information about Member, including information
                about Member’s treatment or care for reproductive health (e.g.,
                family planning, contraception, miscarriage, abortion,
                maternity, infertility), substance use disorders (e.g., drugs
                and alcohol), mental or behavioral health disorders, HIV/AIDS,
                sexually transmitted diseases (STDs), communicable diseases,
                developmental or intellectual disabilities, genetic disorders,
                (including genetic testing for such disorders and genetic
                history), abuse (e.g., sexual, physical or mental), brain or
                other cognitive disorders, or other sensitive information. By
                clicking on the “I AGREE” button you are specifically
                authorizing the disclosure of this highly sensitive health
                information.
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span
                class="!block mb-4"
              >
                We are making this disclosure at your request, with your
                approval and at your direction. You may be asking us to make this disclosure in order to:
              </span>
              <span
                class="inline-block mb-4"
              >
                <ul
                  class="list-disc list-outside pl-5"
                >
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    Support the person’s involvement in the Member’s care or payment for that care; or
                  </li>
                  <li
                    class="pb-2 marker:text-blue-500"
                  >
                    Support treatment, payment and certain health care operations activities, including care coordination and case management among the Member’s care team.
                  </li>
                </ul>
              </span>
              <span
                class="!block mb-4 pt-2"
              >
                You acknowledge that this person
                 and the people, companies and other third parties that they may to choose to share Member’s information after they receive it,
                may not be subject to state or
                federal health information privacy laws, such as the federal
                Health Information Portability and Accountability Act and its
                implementing regulations (collectively, called “HIPAA”) , 42
                U.S.C. § 290dd-2 and its implementing regulations at 42 CFR Part
                2 (collectively, called “Part 2”) for certain substance use
                disorder records, or state health information confidentiality
                laws. If your Personal Representative or someone that they have
                authorized to have access to your Part 2 substance use disorder
                records is a HIPAA covered entity or business associate
                (collectively, called a “HIPAA-regulated entity”) that is
                receiving your records to support treatment, payment or health
                care operations activities, the HIPAA-regulated entity recipient
                may redisclose those substance use disorder records for any
                purpose permitted by HIPAA, except for uses and disclosures for
                civil, criminal, administrative, and legislative proceedings
                against Member.
              </span>
              <span
                class="inline-block pt-4"
              >
                This authorization for the release of your health information is voluntary. This authorization will remain in effect until one of the following events happen:
              </span>
              <span
                class="inline-block mb-4"
              >
                <ul
                  class="list-outside list-disc pl-4 pt-4"
                >
                  <li
                    class="mb-2 marker:text-blue-500"
                  >
                    <span
                      class="rich-text body-1 undefined"
                    >
                      <span>
                        This authorization expires one (1) year from the date you click the
                      </span>
                      <span
                        class="font-bold"
                      >
                         "I Agree" 
                      </span>
                      <span>
                        button.
                      </span>
                    </span>
                  </li>
                  <li
                    class="mb-2 marker:text-blue-500"
                  >
                    It is revoked (taken back).
                  </li>
                  <li
                    class="mb-2 marker:text-blue-500"
                  >
                    We reasonably determine that allowing 
                    the person you have designated to have Full Access 
                    to the Member’s 
                     health information present an
                    unacceptable security risk.
                  </li>
                  <li
                    class="mb-2 marker:text-blue-500"
                  >
                    As otherwise provided for in this authorization or our User Agreement, such as if we learn that account credentials have been misused.
                  </li>
                </ul>
              </span>
              <span
                class="mb-4 pt-4"
              >
                You understand that BlueCross BlueShield of Tennessee will not condition the provision of treatment, payment for treatment, enrollment in a health plan, or eligibility for benefits on your agreement to this authorization. You may take back this authorization in writing at any time, except to the extent the information has already been disclosed in reliance on this authorization. You may take back this authorization by sending a request to us the Contact Us page on bcbst.com or by sending us your written cancellation to BlueCross BlueShield of Tennessee, Privacy; 1 Cameron Hill Circle; Building 1, 5th Floor; Chattanooga, Tennessee 37402. If you decide to take back this authorization, it will not affect any disclosure BlueCross BlueShield made in reliance on this authorization before the cancellation.
              </span>
            </span>
            <span
              class="rich-text body-1 undefined"
            >
              <span
                class="!block mb-4 pt-4"
              >
                Please note that the person you selected will not have Full Access to
                 the Member’s health information if you do not sign this authorization.
              </span>
              <span
                class="font-bold"
              >
                Notice To Recipient of Substance Use Disorder Records:
              </span>
              <span>
                 42 CFR Part 2 prohibits unauthorized use or disclosure of these
                records.
              </span>
            </span>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              class=""
              style="width: 100%; height: 1px; background-color: rgb(204, 204, 204);"
            />
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              class="flex flex-row gap-2 p-2  checkbox-disabled "
            >
              <label>
                <input
                  checked=""
                  id="myCheckbox"
                  name=""
                  type="checkbox"
                />
              </label>
              <div
                class="flex flex-col"
              >
                <label
                  for="myCheckbox"
                >
                  <p />
                </label>
                <span
                  class="rich-text body-1 undefined"
                >
                  <span
                    class="font-bold"
                  >
                    I Agree.
                  </span>
                  <span>
                     Clicking “I Agree” means that you have read, understand, and
                    agree to this authorization. You are giving your permission
                    for BlueCross BlueShield of Tennessee to give 
                    this person Full Access to Member’s
                    health information, including your highly sensitive health
                    information. You understand that you can contact BlueCross
                    BlueShield of Tennessee for a copy of this authorization.
                  </span>
                </span>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
          </div>
        </main>
        <button
          aria-label="Save Permissions"
          class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null font-bold active"
          type="button"
        >
          Save Permissions
        </button>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
        />
      </div>
      <a
        aria-label="Cancel"
        style="display: block;"
      >
        <button
          class="flex flex-row link-container undefined"
          style="max-width: max-content; height: auto; display: block;"
          tabindex="-1"
          type="button"
        >
          <p
            class="link undefined"
          >
            Cancel
          </p>
        </button>
      </a>
    </div>
  </div>
</body>
`;

exports[`Edit Level Of Access Component should render the UI correctly for Success page 1`] = `
<body>
  <div>
    <div
      class="flex flex-col items-center"
    >
      <img
        alt="success"
        class="size-[80px]"
        data-nimg="1"
        decoding="async"
        height="40"
        loading="lazy"
        src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
        srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
        style="color: transparent;"
        width="40"
      />
      <span
        style="display: block; width: 1px; min-width: 1px; height: 24px; min-height: 24px;"
      />
      <h1
        class="title-1 title-2"
      >
        Level Of Access Saved
      </h1>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
      />
      <div
        class="flex flex-col w-[358px]"
      >
        <div
          class="flex flex-col items-center"
        >
          <p
            class="body-1 text-center"
            style="display: block;"
          >
            The Level of access to your account information has been updated for:
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <p
            class="body-1 font-bold"
            style="display: block;"
          >
            Chris
          </p>
        </div>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
        />
        <button
          aria-label="Done"
          class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null undefined"
          type="button"
        >
          Done
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Edit Level Of Access Component should render the UI correctly for subscriber 1`] = `
<body>
  <div>
    <div
      class="flex flex-col items-center"
    >
      <span
        style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
      />
      <h2
        class="title-2"
      >
        Edit Level Of Access
      </h2>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
      />
      <div
        class="flex flex-col items-center  w-[358px]"
      >
        <div
          class="flex flex-col"
        >
          <p
            class="body-1 text-center"
            style="display: block;"
          >
            You’re changing access for:
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <p
            class="body-1 text-center font-bold"
            style="display: block;"
          >
            Chris
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
          />
          <div
            class="flex flex-col"
          >
            <div
              class="flex flex-row gap-1 "
            >
              <label>
                <input
                  aria-label="Full Sharing"
                  id=""
                  name=""
                  type="radio"
                />
              </label>
              <div
                class="flex-col m-1"
              >
                <p
                  class="font-bold"
                >
                  Full Sharing
                </p>
                <p>
                  They’ll see documents and claims, even those with sensitive information.
                </p>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              class="flex flex-row gap-1 "
            >
              <label>
                <input
                  aria-label="Basic Sharing"
                  id=""
                  name=""
                  type="radio"
                />
              </label>
              <div
                class="flex-col m-1"
              >
                <p
                  class="font-bold"
                >
                  Basic Sharing
                </p>
                <p>
                  They won’t be able to see documents or claims with sensitive information.
                </p>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <span
              class="rich-text body-1 undefined"
            >
              <span>
                <a
                  class="link font-bold"
                  href="/contact"
                >
                  Contact us
                </a>
              </span>
              <span>
                 to remove the subscriber’s access.
              </span>
            </span>
          </div>
        </div>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
        />
        <div
          class="mb-8"
        >
          <p
            class="body-1 body-2"
            style="display: block;"
          >
            Disclaimer: BlueCross BlueShield of Tennessee is not responsible for your personal representative or any third parties authorized by you or your personal representative to hae access to your health information. BlueCross BlueShield of Tennessee does not warrant that the information provided will be accurate, timely or complete.
          </p>
        </div>
        <button
          aria-label="Next"
          class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null font-bold primary-color"
          type="button"
        >
          Next
        </button>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
        />
        <button
          class="flex flex-row link-container undefined"
          style="max-width: max-content; height: auto; display: block;"
          type="button"
        >
          <p
            class="link !no-underline"
            style="display: block;"
          >
            Cancel
          </p>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Edit Level Of Access Component should render the UI correctly for subscriber 2`] = `
<body>
  <div>
    <div
      class="flex flex-col items-center"
    >
      <span
        style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
      />
      <h2
        class="title-2"
      >
        Edit Level Of Access
      </h2>
      <span
        style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
      />
      <div
        class="flex flex-col items-center  w-[358px]"
      >
        <div
          class="flex flex-col"
        >
          <p
            class="body-1 text-center"
            style="display: block;"
          >
            You’re changing access for:
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
          />
          <p
            class="body-1 text-center font-bold"
            style="display: block;"
          >
            Chris
          </p>
          <span
            style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
          />
          <div
            class="flex flex-col"
          >
            <div
              class="flex flex-row gap-1 "
            >
              <label>
                <input
                  aria-label="Full Sharing"
                  id=""
                  name=""
                  type="radio"
                />
              </label>
              <div
                class="flex-col m-1"
              >
                <p
                  class="font-bold"
                >
                  Full Sharing
                </p>
                <p>
                  They’ll see documents and claims, even those with sensitive information.
                </p>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              class="flex flex-row gap-1 "
            >
              <label>
                <input
                  aria-label="Basic Sharing"
                  id=""
                  name=""
                  type="radio"
                />
              </label>
              <div
                class="flex-col m-1"
              >
                <p
                  class="font-bold"
                >
                  Basic Sharing
                </p>
                <p>
                  They won’t be able to see documents or claims with sensitive information.
                </p>
              </div>
            </div>
            <span
              style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
            />
            <div
              class="flex flex-row gap-1 "
            >
              <label>
                <input
                  aria-label="None"
                  id=""
                  name=""
                  type="radio"
                />
              </label>
              <div
                class="flex-col m-1"
              >
                <p
                  class="font-bold"
                >
                  None
                </p>
                <p>
                  They won’t see any documents and claims.
                </p>
              </div>
            </div>
          </div>
        </div>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
        />
        <div
          class="mb-8"
        >
          <p
            class="body-1 body-2"
            style="display: block;"
          >
            Disclaimer: BlueCross BlueShield of Tennessee is not responsible for your personal representative or any third parties authorized by you or your personal representative to hae access to your health information. BlueCross BlueShield of Tennessee does not warrant that the information provided will be accurate, timely or complete.
          </p>
        </div>
        <button
          aria-label="Next"
          class="button-text primary text-center flex flex-row justify-center items-center min-w-fit null font-bold primary-color"
          type="button"
        >
          Next
        </button>
        <span
          style="display: block; width: 1px; min-width: 1px; height: 16px; min-height: 16px;"
        />
        <button
          class="flex flex-row link-container undefined"
          style="max-width: max-content; height: auto; display: block;"
          type="button"
        >
          <p
            class="link !no-underline"
            style="display: block;"
          >
            Cancel
          </p>
        </button>
      </div>
    </div>
  </div>
</body>
`;
